added log file but work in progress..

--- a/KP/KPWorker/KPWorker.csproj
+++ b/KP/KPWorker/KPWorker.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="NReco.Logging.File" Version="1.1.5" />
   </ItemGroup>
 
   <ItemGroup>
