--- a/KP/KPWorker/appsettings.json
+++ b/KP/KPWorker/appsettings.json
@@ -3,6 +3,13 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "File": {
+      "Path": "app.log",
+      "Append": true,
+      "MinLevel": "Warning", // min level for the file logger
+      "FileSizeLimitBytes": 2, ////10485760, // use to activate rolling file behaviour - 10MB
+      "MaxRollingFiles": 10 // use to specify max number of log files
     }
   }
 }
