Added DB connection settings. Added enum's for Availability and Condition for Items on offer. Added tables corresponding to Condition, ItemAvailability and Currency.

--- a/KP/KPWorker/appsettings.json
+++ b/KP/KPWorker/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "KPConnection": "Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,7 +11,7 @@
       "Path": "app.log",
       "Append": true,
       "MinLevel": "Warning", // min level for the file logger
-      "FileSizeLimitBytes": 2, ////10485760, // use to activate rolling file behaviour - 10MB
+      "FileSizeLimitBytes": 10485760, // use to activate rolling file behaviour - 10MB
       "MaxRollingFiles": 10 // use to specify max number of log files
     }
   }
