--- a/KP/KPWorker/appsettings.Development.json
+++ b/KP/KPWorker/appsettings.Development.json
@@ -1,8 +1,18 @@
 {
+  "ConnectionStrings": {
+    "KPConnection": "Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "File": {
+      "Path": "app.log",
+      "Append": true,
+      "MinLevel": "Warning", // min level for the file logger
+      "FileSizeLimitBytes": 10485760, // use to activate rolling file behaviour - 10MB
+      "MaxRollingFiles": 10 // use to specify max number of log files
     }
   }
 }
