--- a/KP/KPWorker/appsettings.json
+++ b/KP/KPWorker/appsettings.json
@@ -2,17 +2,31 @@
   "ConnectionStrings": {
     "KPConnection": "Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
   },
+  "MyConfiguration": {
+    "searchUri": "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?categoryId=2695&groupId=876&priceFrom=200&priceTo=4000&currency=eur"
+    //"searchUri": "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/grupa/2695/876/"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Error",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning"
     },
-    "File": {
-      "Path": "app.log",
-      "Append": true,
-      "MinLevel": "Warning", // min level for the file logger
-      "FileSizeLimitBytes": 10485760, // use to activate rolling file behaviour - 10MB
-      "MaxRollingFiles": 10 // use to specify max number of log files
+    "Debug": { // Debug provider.
+      "LogLevel": {
+        "Default": "Information", // Overrides preceding LogLevel:Default setting.
+        "Microsoft.Hosting": "Trace" // Debug:Microsoft.Hosting category.
+      }
+    },
+      "File": {
+        "LogLevel": {
+          "Default": "Information",
+          "Microsoft": "Information"
+        },
+        "Path": "app.log",
+        "Append": "True",
+        "FileSizeLimitBytes": 10485760, // 10 * 1024 * 1024 => 10MB
+        "MaxRollingFiles": 3 // use to specify max number of log files
+      }
     }
   }
-}
