Refactored code and removed unnecessary commented code.

--- a/KP/KPWorker/appsettings.json
+++ b/KP/KPWorker/appsettings.json
@@ -3,7 +3,7 @@
     "KPConnection": "Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
   },
   "MyConfiguration": {
-    "searchUri": "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?categoryId=2695&groupId=876&priceFrom=200&priceTo=4000&currency=eur"
+    "KPUrl": "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?categoryId=2695&groupId=876&priceFrom=200&priceTo=4000&currency=eur"
     //"searchUri": "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/grupa/2695/876/"
   },
   "Logging": {
