Added Serilog for logging to console and file.

--- a/KP/KPWorker/appsettings.json
+++ b/KP/KPWorker/appsettings.json
@@ -3,35 +3,33 @@
     "KPConnection": "Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
   },
   "MyConfiguration": {
-    "KPUrl": 
-      [
-        "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?categoryId=2695&groupId=876&priceFrom=100&priceTo=24000&currency=eur",
-        "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?action=list&page=1&categoryId=2695&groupId=876&order=posted%20desc&currency=eur&priceText=Kontakt&search=Tra%C5%BEi&dummy=name",
-        "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?action=list&page=1&categoryId=2695&groupId=876&order=posted%20desc&currency=eur&priceText=Dogovor&search=Tra%C5%BEi&dummy=name",
-        "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?action=list&page=1&categoryId=2695&groupId=876&order=posted%20desc&currency=eur&priceText=Pozvati&search=Tra%C5%BEi&dummy=name"
+    "KPUrl": [
+      "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?categoryId=2695&groupId=876&priceFrom=100&priceTo=24000&currency=eur",
+      "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?action=list&page=1&categoryId=2695&groupId=876&order=posted%20desc&currency=eur&priceText=Kontakt&search=Tra%C5%BEi&dummy=name",
+      "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?action=list&page=1&categoryId=2695&groupId=876&order=posted%20desc&currency=eur&priceText=Dogovor&search=Tra%C5%BEi&dummy=name",
+      "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?action=list&page=1&categoryId=2695&groupId=876&order=posted%20desc&currency=eur&priceText=Pozvati&search=Tra%C5%BEi&dummy=name"
     ]
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "Override": {
+      "Default": "Information",
+      "Microsoft": "Information",
+      "System": "Information"
     },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Error",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Warning"
-    },
-    "Debug": { // Debug provider.
-      "LogLevel": {
-        "Default": "Information", // Overrides preceding LogLevel:Default setting.
-        "Microsoft.Hosting": "Trace" // Debug:Microsoft.Hosting category.
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "log-.txt",
+          "rollingInterval": "Day"
+        }
       }
-    },
-      "File": {
-        "LogLevel": {
-          "Default": "Information",
-          "Microsoft": "Information"
-        },
-        "Path": "app.log",
-        "Append": "True",
-        "FileSizeLimitBytes": 10485760, // 10 * 1024 * 1024 => 10MB
-        "MaxRollingFiles": 3 // use to specify max number of log files
-      }
+    ],
+    "Properties": {
+      "Application": "KPWorker"
     }
   }
+}
