--- a/KP/KPWorker/appsettings.json
+++ b/KP/KPWorker/appsettings.json
@@ -3,7 +3,7 @@
     "KPConnection": "Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
   },
   "MyConfiguration": {
-    "KPUrl": [
+    "KPUrls": [
       "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?categoryId=2695&groupId=876&priceFrom=100&priceTo=24000&currency=eur",
       "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?action=list&page=1&categoryId=2695&groupId=876&order=posted%20desc&currency=eur&priceText=Kontakt&search=Tra%C5%BEi&dummy=name",
       "https://novi.kupujemprodajem.com/umetnicka-dela-i-materijali/slike-starije-od-20-godina/pretraga?action=list&page=1&categoryId=2695&groupId=876&order=posted%20desc&currency=eur&priceText=Dogovor&search=Tra%C5%BEi&dummy=name",
@@ -24,7 +24,8 @@
         "Name": "File",
         "Args": {
           "path": "log-.txt",
-          "rollingInterval": "Day"
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {Message:lj}{NewLine}{Exception}"
         }
       }
     ],
