--- a/KP/KPWorker/Properties/launchSettings.json
+++ b/KP/KPWorker/Properties/launchSettings.json
@@ -1,11 +1,14 @@
-﻿{
+{
   "profiles": {
     "KPWorker": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
