removed scripts folder added docker files in rott of worker app added docker compose note: work in progress worker cannot communicate with db

--- a/KP/KPWorker/appsettings.json
+++ b/KP/KPWorker/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "KPConnection": "Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
+    "KPConnection": "Data Source=(local),1433;Initial Catalog=KPProducts;User Id=sa;Password=S3cur3P@ssW0rd!;"
+    //"Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
   },
   "MyConfiguration": {
     "KPUrls": [
