Moved DB and docker file to DB folder. Fixed app settings to point to DB in docker. Removed script files.

--- a/KP/KPWorker/appsettings.json
+++ b/KP/KPWorker/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "KPConnection": "Data Source=(local),1433;Initial Catalog=KPProducts;User Id=sa;Password=S3cur3P@ssW0rd!;"
-    //"Data Source=ESLT-ANJO-01;Initial Catalog=KPProducts;Integrated Security=True;"
+    "KPConnection": "Server=sql-server-db,1433;Database=KPProducts;User Id=SA;Password=S3cur3P@ssW0rd!;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "MyConfiguration": {
     "KPUrls": [
