--- a/src/KPWorker/appsettings.json
+++ b/src/KPWorker/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "KPConnection": "Server=sql-server-db,1433;Database=KPProducts;User Id=SA;Password=S3cur3P@ssW0rd!;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "KPConnection": "Server=dbs,1433;Database=KPProducts;User Id=SA;Password=S3cur3P@ssW0rd!;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "MyConfiguration": {
     "KPUrls": [
